[package]
name = "hal-elements"
version = "0.1.4"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/hal-elements/"
repository = "https://github.com/stevenroose/hal-elements/"
description = "hal-elements: an Elements extension of hal"
keywords = [ "crypto", "bitcoin", "elements", "liquid" ]
readme = "README.md"

[lib]
name = "hal_elements"
path = "src/lib.rs"

[[bin]]
name = "hal-elements"
path = "src/bin/hal-elements/main.rs"


[dependencies]
# hal = "0.7.0"
clap = "2.32"
log = "0.4.5"
fern = "0.6.0"
base64-compat = "1.0.0"

serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"
hex = "0.3.2"
elements = {version = "0.17.0", features = ["serde-feature"] }
secp256k1-sys = "=0.4.1"

elements-miniscript = { git = "https://github.com/ElementsProject/elements-miniscript", features = ["compiler", "serde"], rev = "2cfa78cf4b84e10a37f124e4f0da2d8c4d554d1b" }
hal = {git = "https://github.com/stevenroose/hal", rev = "5f03300d4ad73ea5b337e7eb38923a2eed335a25"}